Add Content Security Policy meta tag to baseof.html

--- a/themes/PaperMod/layouts/_default/baseof.html
+++ b/themes/PaperMod/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
 
 <!DOCTYPE html>
 <html lang="{{ site.Language }}" dir="{{ .Language.LanguageDirection | default "auto" }}">
-
+<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 <head>
     {{- partial "head.html" . }}
 </head>
