Add contact page with relevant links and information

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,6 +7,10 @@
 
 <head>
     {{- partial "head.html" . }}
+     <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/css-social-buttons/1.3.0/css/zocial.css"
+        integrity="sha256-g4vWW6AWJCUHC8m5UorUQcwX/a6Qge0afGGHRN8OrWA="
+        crossorigin="anonymous">
 </head>
 
 <body class="
