--- a/layouts/_default/search.html
+++ b/layouts/_default/search.html
@@ -1,10 +1,13 @@
-{{ define "main" }}
-<section class="container mx-auto px-4 py-8">
-  <h1 class="text-3xl font-semibold mb-4">Search</h1>
-  <div class="gcse-search"></div>
-</section>
-{{ end }}
-{{ define "head" }}
-{{- /* Load CSE script in head for this page only */ -}}
-<script async src="https://cse.google.com/cse.js?cx=d3c76880e4ff64f5b"></script>
-{{ end }}
+{{- define "main" }}
+
+<header class="page-header">
+<h1>{{ .Title }} &nbsp;</h1>
+</header>
+
+<div id="searchbox">
+    <input id="searchInput" autofocus placeholder="{{ .Params.placeholder | default (printf "%s↵" .Title) }}"
+        aria-label="search" type="search" autocomplete="off" maxlength="64">
+    <ul id="searchResults" aria-label="search results"></ul>
+</div>
+
+{{- end }}{{/* end main */}}
