--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,6 +11,10 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/css-social-buttons/1.3.0/css/zocial.css"
         integrity="sha256-g4vWW6AWJCUHC8m5UorUQcwX/a6Qge0afGGHRN8OrWA="
         crossorigin="anonymous">
+
+        <meta http-equiv="Content-Security-Policy"
+      content="default-src 'self'; base-uri 'self'; frame-ancestors 'none'; object-src 'none'; upgrade-insecure-requests; img-src 'self' https: data:; font-src 'self' https://fonts.gstatic.com; connect-src 'self'; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://fonts.googleapis.com; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net">
+
 </head>
 
 <body class="
