--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -12,8 +12,20 @@
         integrity="sha256-g4vWW6AWJCUHC8m5UorUQcwX/a6Qge0afGGHRN8OrWA="
         crossorigin="anonymous">
 
-        <meta http-equiv="Content-Security-Policy"
-      content="default-src 'self'; base-uri 'self'; frame-ancestors 'none'; object-src 'none'; upgrade-insecure-requests; img-src 'self' https: data:; font-src 'self' https://fonts.gstatic.com; connect-src 'self'; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net https://fonts.googleapis.com; script-src 'self' https://cdnjs.cloudflare.com https://cdn.jsdelivr.net">
+  <meta http-equiv="Content-Security-Policy"
+  content="
+    default-src 'self';
+    base-uri 'self';
+    object-src 'none';
+    frame-ancestors 'none';
+    img-src 'self' https: data:;
+    style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com;
+    font-src 'self' https://fonts.gstatic.com data:;
+    script-src 'self' https://cse.google.com https://www.google.com https://www.gstatic.com https://cdn.jsdelivr.net/;
+    frame-src https://www.google.com https://cse.google.com;
+    connect-src 'self';
+    upgrade-insecure-requests
+  ">
 
 </head>
 
