--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -21,7 +21,7 @@
     img-src 'self' https: data:;
     style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://fonts.googleapis.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com;
     font-src 'self' https://fonts.gstatic.com data:;
-    script-src 'self' https://cse.google.com https://www.google.com https://www.gstatic.com https://cdn.jsdelivr.net/;
+    script-src 'self' https://cse.google.com https://www.google.com https://www.gstatic.com https://cdn.jsdelivr.net https://www.googletagmanager.com;
     frame-src https://www.google.com https://cse.google.com;
     connect-src 'self';
     upgrade-insecure-requests
